<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:stretchColumns="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:onClick="uploadPicture"
                android:text="@string/upload_photo"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:onClick="uploadPicture"
                android:src="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/ed_pname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/product_name_hint"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText

                android:id="@+id/ed_pprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/product_price_hint"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText

                android:id="@+id/ed_pquantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/product_quantity_hint"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText

                android:id="@+id/ed_psupplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/supplier_"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/add_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="addNewProduct"
                android:text="@string/add_new_product"
                android:textAllCaps="false" />
        </TableLayout>
    </ScrollView>

</LinearLayout>