<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/product_pic"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:autofillHints=""
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/product_name_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:hint="@string/product_name_hint"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/product_price_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif-medium"
                        android:hint="@string/product_price_hint"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="3">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/product_quantity_hint"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tv_current_quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="5dp"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/set_quantity"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@android:color/black"
                            android:textSize="25sp" />

                        <EditText
                            android:id="@+id/ed_set_quantaty"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/set_quantity"
                            android:inputType="number"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/confirm_set_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="ok"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="end"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/increase_quantity"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:onClick="makeChange"
                        android:text="+"
                        android:textColor="@android:color/black"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/decrease_quantity"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:onClick="makeChange"
                        android:text="-"
                        android:textColor="@android:color/black"
                        android:textSize="30sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/supplier_"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_supplier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/supplier_"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/order_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/order_"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </TableLayout>
    </ScrollView>
</LinearLayout>